# avp64

./: .gitignore  CMakeLists.txt  README.md
include/avp64/: core.h  cpu.h
include/avp64/stm32/: stm32_gpio.h  stm32_peripherals.h  stm32_system_control.h  stm32_uart.h
include/fuzzing/: afl-hash.h  can_injector.h  probe.h  test.grpc.pb.h  test.pb.h  test_interface.h  test_receiver.h  test_server.h
include/testing/: avp64_test_receiver.h  avp64_testing_receiver.h  can_injector.h  mmio_probe.h  probe.h  test_interface.h  test_receiver.h
src/avp64/: core.cpp  cpu.cpp  main.cpp  system.cpp  system.h
src/avp64/stm32/: stm32_gpio.cpp  stm32_peripherals.cpp  stm32_system_control.cpp  stm32_uart.cpp
src/fuzzing/: can_injector.cpp  mq_test_interface.cpp  pipe_test_interface.cpp  probe.cpp  test.grpc.pb.cc  test.pb.cc  test_interface.cpp  test_receiver.cpp  test_server.cpp
src/testing/: avp64_test_receiver.cpp  avp64_testing_receiver.cpp  can_injector.cpp  mmio_probe.cpp  mq_test_interface.cpp  pipe_test_interface.cpp  probe.cpp  test_receiver.cpp
utils/: fetch_buildroot_linux  format
vscode-tutorial/: setup.bash
